--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@
 }
 
 .cursor {
-    height: 40px;
-    width: 40px;
-    background-color: blue;
+  width: 0px;
+  height: 0px;
+  border-style: solid;
+  border-width: 0 40px 50px 40px;
+  border-color: transparent transparent gold transparent;
 }
