--- a/style.css
+++ b/style.css
@@ -6,10 +6,32 @@
     font-family: 'Poppins', sans-serif;
 }
 
+body {
+    height: 100vh;
+    width: 100vw;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container {
+    width: 1300px;
+    height: 700px;
+    border: 2px solid black;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .cursor {
-  width: 0px;
-  height: 0px;
-  border-style: solid;
-  border-width: 0 40px 50px 40px;
-  border-color: transparent transparent gold transparent;
+    display: flex;
+
+    background: none;
+    width: 0px;
+    height: 0px;
+    border-style: solid;
+    border-width: 0 40px 60px 40px;
+    border-color: transparent transparent gold transparent;
 }
