--- a/style.css
+++ b/style.css
@@ -13,11 +13,10 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 20% 10%;
 }
 
 .container {
-    width: 1300px;
-    height: 700px;
     border: 2px solid black;
 
     display: flex;
@@ -34,4 +33,47 @@ body {
     border-style: solid;
     border-width: 0 40px 60px 40px;
     border-color: transparent transparent gold transparent;
+}
+
+.menu {
+    position: absolute;
+    height: 400px;
+    width: 600px;
+    background-color: #fafafa;
+    box-shadow: 3px 3px 3px gray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 20px;
+
+    display: none;
+}
+
+h2 {
+    font-size: 2rem;
+    text-align: center;
+}
+
+article {
+    display: flex;
+    font-size: 2rem;
+    align-items: center;
+    margin: 10%;
+}
+
+p {
+    cursor: default;
+}
+
+button {
+    margin: 15px;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    font-size: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
