--- a/style.css
+++ b/style.css
@@ -13,10 +13,11 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20% 10%;
 }
 
 .container {
+    width: 1300px;
+    height: 700px;
     border: 2px solid black;
 
     display: flex;
@@ -27,6 +28,7 @@ body {
 .cursor {
     display: flex;
 
+    transition: 0.3s;
     background: none;
     width: 0px;
     height: 0px;
@@ -35,19 +37,27 @@ body {
     border-color: transparent transparent gold transparent;
 }
 
+/* MENU */
+
 .menu {
     position: absolute;
-    height: 400px;
-    width: 600px;
+    height: auto;
+    width: 50%;
     background-color: #fafafa;
     box-shadow: 3px 3px 3px gray;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
     border-radius: 20px;
 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 30px;
+
     display: none;
+}
+
+.close {
+    font-size: 30px;
 }
 
 h2 {
@@ -58,12 +68,15 @@ h2 {
 article {
     display: flex;
     font-size: 2rem;
+    margin: 15%;
+    justify-content: center;
     align-items: center;
-    margin: 10%;
 }
 
 p {
     cursor: default;
+    font-size: 3rem;
+    margin: 5%;
 }
 
 button {
@@ -76,4 +89,23 @@ button {
     align-items: center;
     justify-content: center;
     text-align: center;
+    border-radius: 50%;
+    font-size: 2rem;
+    padding: 20px;
+    border: 2px solid black;
+    background: none;
+    transition: 0.3s;
+}
+
+button:hover {
+    background-color: black;
+    color: #fafafa;
+    transition: 0.3s;
+}
+
+.validate_btn {
+    width: 40%;
+    padding: 25px;
+    border-radius: 30px;
+    font-size: 1.5rem;
 }
